<resources>
    <string name="app_name">MotoClick</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="hintTypeMessage">Type a message...</string>
    <string name="hintTypeName">Name</string>
    <string name="hintTypePhone">Phone (not necessary)</string>
    <string name="hintTypeMoto">Moto (not necessary)</string>


    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>


    <string name="markerSnippet">You</string>

    <string name="statusHome">home</string>
    <string name="statusWay">in way</string>
    <string name="statusSOS">SOS</string>
    <string name="statusFriends">with friends</string>
    <string name="statusWant">I want to ride</string>

    <string name="toastAuthFailed">Authentication failed.</string>
    <string name="toastAuthFinish">Authorization is complete.</string>
    <string name="toastPickFinish">Loading is complete.</string>
    <string name="toastEnterName">Please enter your name!</string>
    <string name="toastDelAccount">Your account has been deleted.</string>
    <string name="toastDelAccountError">An error occurred while deleting the account. Try again.</string>
    <string name="toasNotAuth">You are not authorized.</string>
    <string name="toasAddFriend">added.</string>
    <string name="toasDelFriend">removed.</string>
    <string name="toasDontHaveChat">The message history is empty.</string>
    <string name="toasRemovChat">Chat was successfully deleted.</string>


    <string name="titleStatus">Statuses</string>
    <string name="titleInstruction">Instructions</string>

    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnContact">contact</string>
    <string name="btnWay">route</string>
    <string name="btnPrivacyPolicy"><b><u>Privacy Policy</u></b>\n\n</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnSave">Save</string>
    <string name="btnAddFriend">Add to Friend</string>
    <string name="btnDelFriend">Remove from friends</string>
    <string name="btnFabOnGPS">GPS on</string>
    <string name="btnFabOffGPS">GPS off</string>
    <string name="btnFabLocation">Location</string>


    <string name="textName">name:</string>
    <string name="textStatus">status:</string>
    <string name="textPhone">phone:</string>
    <string name="textMoto">moto:</string>
    <string name="textVersion">Version: 1.3.3</string>
    <string name="textGroupFacebook">Our Group</string>
    <string name="textWorkersProject">Work on the project</string>
    <string name="textDeleteAccount">delete account</string>
    <string name="navStatus">Statuses</string>
    <string name="navInstructions">Instructions</string>
    <string name="navAdviseFriend">Recommend to friends</string>
    <string name="navAboutProgram">About the program</string>
    <string name="navFromDeveloper">More from developer</string>
    <string name="navLinkFb">Group in facebook</string>
    <string name="navFeedback">Feedback</string>
    <string name="navPlaceFriend">Place on the map</string>
    <string name="navWay">route</string>
    <string name="navListFriends">Friends</string>
    <string name="navMessages">Messages</string>


    <string name="dialogProgressAuth">Please wait\ncompletion of authorization.</string>
    <string name="dialogProgressAuthFinish">Authorization complete.</string>
    <string name="dialogProgressAuthFinishError">An error occurred during authorization. Try again.</string>
    <string name="dialogProgressUpload">Please wait\nfor the download to complete.</string>
    <string name="dialogProgressUploadFinish">Loading is complete.</string>
    <string name="dialogProgressUploadFinishError">Во время загрузки произошла ошибка. Попробуйте еще раз.</string>

    <string name="dialogAuth">\t\tPlease Log in!\n
\t\tIn order to use the chat and map of the program it is necessary for you to log in.\n
\t\tBy login into the program you agree to our privacy policy and terms of use of the program: Your email address, name and surname that are written in your email account, and your location will be used in the program.\n
</string>

    <string name="dialogInstruction">\t\tWelcome to MotoClick!!!\n\n
    \t\tThe program is intended to help motorcyclists on the road, or on vacation. Moreover, you can find friends with the common interest which is – bikes!!!\n\n
    \t\tWhen starting the app your location is determined by your device and marked on the map. This way, nearest or passing by motorcyclists who also use this program will be able to contact you.\n\n
    \t\tThe program provides statuses such as:\n
    \t\t\t1)Want to ride;\n
    \t\t\t2)On the way\n
    \t\t\t3)At home;\n
    \t\t\t4)Sos;\n
    \t\t\t5)With friends;\n\n
    \t\tChoosing a status shows your current condition for the present time.\n\n
    \t\tThe program includes a chat room and a route builder. In order to contact other motorcyclists or to build your way to him, you need to simply mark the chosen motorcyclist on the map and select your desired function.\n\n
    \t\tThanks for choosing us!!!\n\n
    \t\tUse, comment and write your suggestions in the comments or personally to us!! Let\'s make the app better together!!!\n\n
</string>

    <string name="dialogPermissionLocation">The app uses the device\'s GPS to determine the location of the device. It is necessary to determine your location so that the users of the program can see you and contact you. The location of the phone may be subject to an additional charge. For details, contact your mobile operator.</string>
    <string name="dialogDelAccount">Are you sure you want to delete the account and leave the program?</string>
    <string name="dialogAddNewFriends">You do not have any friends! Add friends to your list or invite your friends to the program.</string>
    <string name="dialogDelFriends">Are you sure you want to remove a friend from the list?</string>


    <string name="worker1">Victor Konarev</string>
    <string name="worker2">Nikita Matatov</string>
    <string name="worker3">Yury Matatov</string>
    <string name="title_activity_chat2">ChatActivity2</string>


    <!-- new -->
    <array name="arrTypeVehicle">
        <item>Stroller</item>
        <item>Moto</item>
        <item>Car</item>
        <item>Truck</item>
        <item>SOS</item>
    </array>

    <string name="textTypeVehicle">%1$s driver</string>
    <string name="textLastVisit">Last visit: %1$s</string>

</resources>