<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_nav_status"
            android:title="@string/navStatus" />
        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/ic_nav_instr"
            android:title="@string/navInstructions" />

        <item
            android:id="@+id/nav_advise_friend"
            android:icon="@drawable/ic_nav_share"
            android:title="@string/navAdviseFriend" />
        <item
            android:id="@+id/nav_about_program"
            android:icon="@drawable/ic_nav_instructions"
            android:title="@string/navAboutProgram" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@android:drawable/btn_star"
            android:title="@string/navFeedback" />

<!--
        <item
            android:id="@+id/nav_from_developer"
            android:icon="@drawable/ic_nav_more"
            android:title="@string/navFromDeveloper" />
-->
        <item
            android:id="@+id/nav_link_fb"
            android:icon="@drawable/ic_nav_facebook"
            android:title="@string/navLinkFb" />
    </group>

</menu>