<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_messages"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/navMessages"
            app:actionLayout="@layout/element_nav_cnt_msg" />

        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/ic_nav_instr"
            android:title="@string/navInstructions" />

        <item
            android:id="@+id/nav_advise_friend"
            android:icon="@drawable/ic_nav_share"
            android:title="@string/navAdviseFriend" />
        <item
            android:id="@+id/nav_about_program"
            android:icon="@drawable/ic_nav_instructions"
            android:title="@string/navAboutProgram" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@android:drawable/btn_star"
            android:title="@string/navFeedback" />

        <item
            android:id="@+id/nav_web"

            android:title="MotoClick Web" />

<!--
        <item
            android:id="@+id/nav_from_developer"
            android:icon="@drawable/ic_nav_more"
            android:title="@string/navFromDeveloper" />
-->

    </group>

</menu>