<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageUser"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <TextView
        android:id="@+id/textNameUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        />

    <TextView
        android:id="@+id/textStatusUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textStatus"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/textMotoUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textMoto"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/textPhoneUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textPhone"
        android:textColor="@color/colorBlack"/>
</LinearLayout>