<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/btnDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="0dp"
        android:text="@string/textDeleteAccount"
        android:textColor="@color/colorBlack" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageDialogUser"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <EditText
            android:id="@+id/editDialogTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/hintTypeName"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutMoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <EditText
            android:id="@+id/editDialogTextMoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/hintTypeMoto"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>